# PeakMacro

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  mod.json
.github/workflows/: build.yml
include/: Macro.hpp  MacroListCell.hpp  MacroManager.hpp  MacroPopup.hpp
resources/: about.md
src/: MacroListCell.cpp  MacroManager.cpp  MacroOverlay.hpp  MacroPopup.cpp  main.cpp
src/hooks/: PlayLayerHook.cpp
